Fix scrollbars being shown in FirefoxOS during screen transitions

--- a/css/maji_screen_transitions.scss
+++ b/css/maji_screen_transitions.scss
@@ -5,6 +5,7 @@ $animation-duration: 350ms;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .page-pre-in {
